--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,15 @@
     "@mui/material": "^5.15.7",
     "@mui/x-data-grid": "^6.19.3",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^2.2.0",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
